# Back-End-LLM

./: .flake8  .gitignore  CHORES.txt  Dockerfile  Makefile  README.md  README_API.md  alembic.ini  db_init_schema.sql  docker-compose.yml  env.example  master.py  openai_realtime_message_type_full.md  pyproject.toml  transcript.txt
Transcript/: Codigo 1.py  bot_conversacional_no_api.py
app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  schemas.py  tasks.py
app/prompting_templates/: avanzado.txt  basic.txt  intermedio.txt  master_template.py
app/routers/: audio.py  auth.py  chat.py  db_operations.py  health.py  insert.py  landing_page_assistant.py  payments.py  read.py  realtime_router.py  registration.py  text.py  upload.py
app/schemas/: auth.py  insert.py  read.py  registration.py
app/services/: audio_service.py  auth_service.py  conversations_service.py  courses_service.py  database.py  db.py  landing_page_assistant.py  llm_service.py  messages_service.py  payments_service.py  profiling_service.py  (+10 more)
bot-scripts/: Test_audio.py  realtime.py  test copy.py
bot_scripts/: bot_conversacional_no_api.py  realtime.py
conversational-bot/: realtime.py
examples/: test_api.py
old_bot_scripts/: test_bot_conver_api.py
scoring-scripts/: get_conver_skills.py  get_user_profile.py
scoring_notebooks/: scoring_analysis.ipynb  scoring_simulator.ipynb  voice_to_text.py
scoring_scripts/: get_conver_scores.py  get_conver_skills.py  get_user_profile.py
scripts/: setup_supabase.py  start_celery.py  start_server.py
tests/: conftest.py  test_health.py
(+36 files in other folders)
