[tool.poetry]
name = "speech-to-text-backend"
version = "0.1.0"
description = "Backend API for Speech-to-Text with LLM integration"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlmodel = "^0.0.14"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.6"

httpx = "^0.25.2"
pydantic = {extras = ["email"], version = "^2.12.3"}
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"

openai = "^1.3.7"
anthropic = "^0.7.8"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
wavio = "^0.0.9"
sounddevice = "^0.5.2"
whisper = "^1.1.10"
asyncpg = "^0.30.0"
email-validator = "^2.3.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 